--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
-    "@react-email/components": "^0.0.16",
+    "@react-email/components": "^1.0.2",
+    "@react-email/render": "^2.0.0",
+    "@react-email/tailwind": "^2.0.2",
     "@smastrom/react-rating": "^1.4.0",
     "@south-paw/react-vector-maps": "^3.2.0",
     "@tanstack/react-query": "^5.8.3",
@@ -112,7 +114,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-email": "^2.1.1",
+    "react-email": "^5.1.0",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
@@ -141,6 +143,10 @@
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
     "@svgr/webpack": "^8.1.0",
+    "@types/d3-shape": "^3.1.7",
+    "@types/dagre": "^0.7.53",
+    "@types/geojson": "^7946.0.16",
+    "@types/leaflet": "^1.9.21",
     "@types/next": "^9.0.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.38",
