--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -38,6 +38,7 @@
     "@radix-ui/react-direction": "^1.0.1",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-hover-card": "^1.0.6",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.3",
     "@radix-ui/react-navigation-menu": "^1.1.3",
@@ -54,9 +55,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
-    "@react-email/components": "^1.0.2",
-    "@react-email/render": "^2.0.0",
-    "@react-email/tailwind": "^2.0.2",
+    "@react-email/components": "^0.0.16",
     "@smastrom/react-rating": "^1.4.0",
     "@south-paw/react-vector-maps": "^3.2.0",
     "@tanstack/react-query": "^5.8.3",
@@ -98,13 +97,13 @@
     "lucide-react": "^0.269.0",
     "moment": "^2.29.4",
     "negotiator": "^0.6.3",
-    "next": "14.1.3",
+    "next": "^16.0.1",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
-    "postcss": "8.4.28",
-    "quill": "^1.3.7",
+    "postcss": "^8.4.29",
+    "quill": "^2.0.3",
     "rc-tree": "^5.8.2",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -114,7 +113,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-email": "^5.1.0",
+    "react-email": "^2.1.1",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
@@ -143,10 +142,6 @@
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
     "@svgr/webpack": "^8.1.0",
-    "@types/d3-shape": "^3.1.7",
-    "@types/dagre": "^0.7.53",
-    "@types/geojson": "^7946.0.16",
-    "@types/leaflet": "^1.9.21",
     "@types/next": "^9.0.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.38",
