feat: enhance environment configuration and middleware for authentication
- Updated .env.example to include detailed backend API and NextAuth configurations.
- Refactored middleware to improve authentication checks and token validation.
- Added redirect logic for unauthorized access in apartment and resident actions.
- Cleaned up unused authentication pages and components to streamline the codebase.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,65 @@
+# ============================================
+# BlueMoon Admin Frontend - Environment Variables
+# ============================================
+# Copy this file to .env.local and fill in your values
+# cp .env.example .env.local
+
+# ============================================
+# Backend API Configuration
+# ============================================
+# URL của backend API server
+# Development: http://localhost:5000
+# Production: https://api.yourdomain.com
+BACKEND_URL=http://localhost:5000
+
+# ============================================
+# NextAuth Configuration
+# ============================================
+# Secret key để mã hóa JWT tokens và session cookies
+# Tạo secret key mới bằng lệnh: openssl rand -base64 32
+# HOẶC sử dụng: https://generate-secret.vercel.app/32
+# 
+# Lưu ý: AUTH_SECRET và NEXTAUTH_SECRET là tương đương
+# Chỉ cần set một trong hai, ưu tiên AUTH_SECRET
+AUTH_SECRET=your-secret-key-here-minimum-32-characters-long
+# NEXTAUTH_SECRET=your-secret-key-here-minimum-32-characters-long
+
+# URL của NextAuth (thường giống với NEXT_PUBLIC_SITE_URL)
+# Development: http://localhost:3000
+# Production: https://yourdomain.com
+# 
+# Lưu ý: Nếu không set, NextAuth sẽ tự động detect từ request
+# Nhưng nên set rõ ràng để tránh warning
+NEXTAUTH_URL=http://localhost:3000
+
+# ============================================
+# Public Site Configuration
+# ============================================
+# Public URL của frontend application
+# Development: http://localhost:3000
+# Production: https://yourdomain.com
+# 
+# Được sử dụng cho:
+# - Metadata (Open Graph, SEO)
+# - API base URL configuration
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
-AUTH_GOOGLE_ID=your-google-client-id
-AUTH_GOOGLE_SECRET=your-google-client-secret
+# ============================================
+# Node Environment
+# ============================================
+# Môi trường chạy ứng dụng
+# Values: development, production, test
+# 
+# Lưu ý: NODE_ENV thường được set tự động bởi Next.js
+# Không cần set thủ công trừ khi có yêu cầu đặc biệt
+# NODE_ENV=development
 
-AUTH_GITHUB_ID=your-github-client-id
-AUTH_GITHUB_SECRET=your-github-client-secret
-
-AUTH_SECRET=your-nextauth-secret
+# ============================================
+# Notes
+# ============================================
+# 1. Không commit file .env.local vào git (đã được ignore)
+# 2. AUTH_SECRET phải có độ dài tối thiểu 32 ký tự
+# 3. Trong production, sử dụng biến môi trường của hosting platform
+#    (Vercel, Netlify, etc.) thay vì file .env.local
+# 4. BACKEND_URL và NEXT_PUBLIC_SITE_URL phải match với cấu hình thực tế
+# 5. NEXTAUTH_URL nên giống với NEXT_PUBLIC_SITE_URL
